--- a/GetAllWords.yaml
+++ b/GetAllWords.yaml
@@ -5343,7 +5343,7 @@ paths:
           content:
             application/json:
               example:
-                detail: "The API-key is invalid."      
+                detail: "The API-key is invalid.. or The API-key has expired.."      
         '501':
           description: 결과값 추출 오류
           content:
